--- a/index.html
+++ b/index.html
@@ -881,16 +881,16 @@ during this time.
             <h3 class="section-title">Connect with Us</h3>
             <ul class="social-media">
               <li>
-                <a href="#" class="facebook col-md-4"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100067374069793" target="_blank" class="facebook col-md-4"><i class="fa-brands fa-facebook-f"></i></a>
               </li>
               <li>
-                <a href="#" class="twitter col-md-4"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/search/results/all/?fetchDeterministicClustersOnly=true&heroEntityKey=urn%3Ali%3Afsd_profile%3AACoAAAxBHoABbPhmOw3fY3EJPUqqNC0z6CtikII&keywords=naushina%20mahomed%20aboo&origin=RICH_QUERY_SUGGESTION&position=0&searchId=7401af84-2d63-4100-86c5-f69ee7047e90&sid=8Gn&spellCorrectionEnabled=false"  target="_blank" class="twitter col-md-4"><i class="fa-brands fa-linkedin-in"></i></a>
               </li>
               <li>
-                <a href="#" class="dribbble col-md-4"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/nm_aboo_attorneys/" target="_blank" class=" col-md-4"><i class="fa-brands fa-instagram"></i></a>
               </li>
               <li>
-                <a href="#" class="github col-md-4"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://twitter.com/attorney_aboo_n" target="_blank" class="github col-md-4"><i class="fa-brands fa-x-twitter"></i></a>
               </li>
 
               
