--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ what would have been a good claim can present too much risk to obtain the desire
                       <p>
                         NM Aboo Attorneyro offers sound commercial advice on contentious
 						as well as Aon contentious insolvency related matters, providing
-						competent and effcienl5ervice to our clients at cost effective rates.
+						competent and effcienl service to our clients at cost effective rates.
                       </p>
                     </blockquote>
                     <span
@@ -535,7 +535,7 @@ what would have been a good claim can present too much risk to obtain the desire
 						advice on employment matters, and advise on and negotiate settlements
 						where appropriate.
 						We have experience in advising on noncontentious issues such as
-						drafting contracts of employment, company policies and sta handbooks.
+						drafting contracts of employment, company policies and staff handbooks.
                       </p>
                     </blockquote>
 					<span
