--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content=" NMA Attorneys" />
     <meta
-      name="keywords"
-      content=" NMA Attorneys , Law, Lawyer, Lawyers,"
-    />
+  name="keywords"
+  content=" NMA Attorneys , Law, Lawyer, Lawyers, Legal advice, Legal representation, Legal consultation, Legal assistance, Legal services, Corporate law, Business law, Contract law, Civil litigation, Criminal defense, Family law, Real estate law, Immigration law, Intellectual property law, Employment law, Tax law, Estate planning, Divorce lawyer, Personal injury lawyer, Arbitration and mediation"
+/>
     <meta name="author" content="ve3z.co.za" />
 
     <!-- Facebook and Twitter integration -->
@@ -351,7 +351,7 @@ well as the Ladies in Business Magazine, UAE and Africa.
       }
     
       .getting-started .to-animate {
-        background-color: rgba(255, 0, 0, 0.785); /* Adjust the opacity value */
+        background-color: rgba(255, 0, 0, 0.885); /* Adjust the opacity value */
         padding: 30px; /* Adjust padding as needed */
         border-radius: 40px; 
         margin-left: px;/* Adjust border radius as needed */
