--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ Contributor, as defined in the BEE Charter of the Republic of South Africa.
                   <li><i class="fa-solid fa-file-contract"></i>Intellectual Property</li>
                   <li><i class="fa-solid fa-gavel"></i>Property Law</li>
                   <li><i class="fa-solid fa-user-shield"></i>Alternative Dispute Resolution</li>
-                  <li><i class="fa-solid fa-house"></i></i></i>Estate Planning</li>
+                  <li><i class="fa-solid fa-house"></i>Estate Planning</li>
                   <li><i class="fa-solid fa-people-roof"></i>Family Law and Matrimony</li>
                   <li><i class="fa-solid fa-shield"></i>Secured Transactions</li>
                 </ul>
@@ -612,7 +612,7 @@ what would have been a good claim can present too much risk to obtain the desire
           <div class="row">
             <div class="col-md-6">
               <div class="box-services">
-                <i class="icon-shield to-animate-2"></i>
+                <i class="fa-solid fa-people-roof"></i>
                 <div class="fh5co-post to-animate">
                   <h3 style="color: red;">  FAMILY LAW & MATRIMONY</h3>
                   <p>
@@ -630,7 +630,7 @@ during this time.
             </div>
             <div class="col-md-6">
               <div class="box-services">
-                <i class="icon-shield to-animate-2"></i>
+                <i class="fa-solid fa-house"></i>
                 <div class="fh5co-post to-animate">
                   <h3  style="color: red;" >  ESTATE PLANNING</h3>
                   <p>
